@@ -4,7 +4,6 @@ O2 - XML db plugin (should use the same interface)
 - 5 - Plugin for mongodb. (IMPROVE!!!!)
 6 - Make other dangerous attributes readonly
 9 - Implement IMPORT sandbox
-10 - IE and not-common browsers detection if content-type is application/xhtml+xml, replacing it with text/html if necessary
 11 -  check whether File.(black|white)list could be a set instead of list of sets
 13 - Add better doc strings for modules
 15 - Support for rewriting urls by database queries (useful for forums and blogs)
